# pictures_converter_gtk

./: CMakeLists.txt  LICENSE  README-de.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  question.md
src/: Config.cpp  Converter.cpp  FileManager.cpp  PicturesConverter (Backup).cpp  PicturesConverter.cpp  PicturesConverter.h  UI.cpp
src/assets/: io.github.quantum_mutnauq.pictures_converter_gtk.gschema.xml  metainfo.xml  picturesconverter.desktop.in
src/locale/de/LC_MESSAGES/: PicturesConverter.po
src/locale/en/LC_MESSAGES/: PicturesConverter.po
